fix: attempt eight to fix landing page content overflowing out of the video background

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,6 +28,7 @@ body {
 
 #welcome-page-html,
 #welcome-page-body {
+  height: 100%;
   overflow: hidden;
 }
 
@@ -75,8 +76,8 @@ body {
 
 .landing-page-content {
   z-index: 2;
-  position: relative;
-  top: 25%;
+  position: absolute;
+  top: 70%;
 }
 
 .landing-page-title {
